--- a/sirius-map-ios/SiriusMap/Base.lproj/LaunchScreen.storyboard
+++ b/sirius-map-ios/SiriusMap/Base.lproj/LaunchScreen.storyboard
@@ -21,9 +21,9 @@
                                 <rect key="frame" x="0.0" y="-10" width="393" height="868"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SiriusMapIcon" translatesAutoresizingMaskIntoConstraints="NO" id="g9G-eO-Gk2">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SiriusMapIcon" id="g9G-eO-Gk2">
                                 <rect key="frame" x="76" y="362" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
